Troubleshooting Layout Issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -414,6 +414,7 @@ a {
     font-size: 1.7rem;
   }
 }
+
 /* Media */
 .media {
   display: flex;
@@ -800,6 +801,7 @@ a {
   .block-showcase .grid {
     grid-template-columns: 50% 50%;
   }
+
   .block-showcase__image {
     justify-self: end;
   }
@@ -809,7 +811,6 @@ a {
     max-width: 700px;
   }
 }
-
 /* Footer */
 .footer {
   background: #232323;
@@ -844,8 +845,10 @@ a {
 }
 
 .footer__brand img {
-  /* TODO: Consider refactoring this and applying it to all images */
+  /* TODO: Consider refactoring this and applying it to 
+  all images. */
   width: 100%;
+  max-width: 230px;
 }
 
 .footer__copyright {
@@ -855,6 +858,9 @@ a {
 }
 
 @media screen and (min-width: 768px) {
+  .footer {
+    font-size: 1.5rem;
+  }
   .footer__sections {
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   }
